--- a/content.css
+++ b/content.css
@@ -154,7 +154,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .caret {
-    background: url('image/xiala@2x.png') no-repeat center center;
+    background: url('image/Down@2x.png') no-repeat center center;
     display: inline-block;
     float: right;
     margin-right: 20px;
