--- a/content.css
+++ b/content.css
@@ -109,7 +109,7 @@ textarea::-webkit-input-placeholder {
     display: block;
     width: 300px;
     height: 60px;
-    background-color: #ba0c25;
+    background-color: #164460;
     opacity: 0.8;
     color: #ffffff;
     outline: none;
