--- a/content.css
+++ b/content.css
@@ -134,7 +134,7 @@ textarea::-webkit-input-placeholder {
     display: none;
 }
 
-#ymh button {
+#ymh {
     font-family: 'Microsoft Yahei', "WhitneyMedium", Arial, sans-serif;
     display: block;
     text-align: left;
