--- a/phone_index.css
+++ b/phone_index.css
@@ -6,6 +6,7 @@
     margin: 0;
     padding: 0;
     position: absolute;
+    overflow: hidden;
 }
 .phone_banner,.weixin_banner {
     width: 100%;
@@ -138,4 +139,6 @@ span.special_tip {
 .pic_container {
     background-color: #f5f5f5;
     overflow: hidden;
+    padding: 1000px;
+    margin: -1000px;
 }
