--- a/phone_index.css
+++ b/phone_index.css
@@ -17,6 +17,15 @@
     /*position: absolute;*/
     overflow: hidden;
 }
+.download_container {
+    width: 100%;
+    height: 100%;
+    background-color: #f5f5f5;
+    margin: 0;
+    padding: 0;
+    /*position: absolute;*/
+    overflow: hidden;
+}
 .phone_banner,.weixin_banner {
     width: 100%;
     height: 320px;
