--- a/phone_index.css
+++ b/phone_index.css
@@ -5,7 +5,7 @@
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
-    position: absolute;
+    /*position: absolute;*/
     overflow: hidden;
 }
 #weixin_container {
