--- a/phone_index.css
+++ b/phone_index.css
@@ -195,7 +195,7 @@ span.title_list {
     margin-top: 10px;
     font-size: 28px;
     color: #666;
-    width: 100%;
+    width: 120px;
     display: inline-block;
     margin-bottom: 40px;
 }
