--- a/phone_index.css
+++ b/phone_index.css
@@ -1,4 +1,8 @@
 /*首页css*/
+body {
+    margin: 0;
+    padding: 0;
+}
 #phone_container {
     width: 100%;
     height: 100%;
@@ -77,7 +81,7 @@
 .phone_body {
     width: 688px;
     height: 648px;
-    margin: 60px 30px 0 20px;
+    margin: 60px 30px 0 30px;
     border: 1px solid #dcdcdc;
     border-radius: 10px;
     background-color: #ebebeb;
@@ -120,7 +124,7 @@
 .download_body{
 	width: 688px;
     height: 648px;
-    margin: 70px 30px 0 20px;
+    margin: 70px 30px 0 30px;
     border: 1px solid #dcdcdc;
     border-radius: 10px;
     background-color: #ebebeb;
