--- a/questionnaire.css
+++ b/questionnaire.css
@@ -83,7 +83,9 @@ textarea::-webkit-input-placeholder {
     text-align: center;
     margin: 60px 0;
 }
-
+.title{
+    font-size: 28px;
+}
 #reg_form {
     width: 600px;
     margin: 0 auto;
@@ -141,7 +143,7 @@ textarea::-webkit-input-placeholder {
     margin-bottom: 20px;
     background-color: #fff;
     width: 100%;
-    font-size: 28px;
+    font-size: 24px;
     padding-left: 20px;
     padding-right: 0;
     height: 60px;
