--- a/questionnaire.css
+++ b/questionnaire.css
@@ -88,6 +88,7 @@ textarea::-webkit-input-placeholder {
     margin: 0px;
     text-align: left;
     padding-bottom: 10px;
+    color: #333333;
 }
 #reg_form {
     width: 600px;
