--- a/questionnaire.css
+++ b/questionnaire.css
@@ -145,7 +145,7 @@ textarea::-webkit-input-placeholder {
     display: block;
     text-align: left;
     margin-bottom: 20px;
-    margin-left: 20px;
+    /*margin-left: 20px;*/
     background-color: #fff;
     width: 100%;
     font-size: 24px;
