--- a/phone_index.css
+++ b/phone_index.css
@@ -21,7 +21,7 @@ body {
     position: absolute;
     overflow: hidden;
 }
-.download_container {
+#download_container {
     width: 100%;
     height: 100%;
     background-color: #f5f5f5;
@@ -165,7 +165,7 @@ span.special_tip {
     margin: -1000px;
 }
 .download_title {
-    width: 100%;
+    width: 200px;
     padding: 30px 30px 20px 30px;
     display: inline-block;
     color: #333;
