--- a/questionnaire.css
+++ b/questionnaire.css
@@ -121,23 +121,23 @@ span.ttt {
 }
 
 #in1 {
-    width: 300px;
+    width: 180px;!important;
 }
 
 #in2 {
-    width: 300px;
+    width: 180px;!important;
 }
 
 #in3 {
-    width: 300px;
+    width: 180px;!important;
 }
 
 #in4 {
-    width: 300px;
+    width: 180px;!important;
 }
 
 #in5 {
-    width: 300px;
+    width: 180px;!important;
 }
 
 #reg_form input, #reg_form select {
