--- a/phone_index.css
+++ b/phone_index.css
@@ -18,7 +18,7 @@ body {
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
-    position: absolute;
+   /* position: absolute;*/
     overflow: hidden;
 }
 #download_container {
@@ -106,7 +106,7 @@ body {
     margin-left: 210px;
     color: #333;
     font-size: 30px;
-    margin-top: 45px;
+    margin-top: 43px;
 }
 .listimg {
     position: absolute;
