--- a/phone_index.css
+++ b/phone_index.css
@@ -135,7 +135,7 @@ body {
     color: #666666;
     font-size: 24px;
     overflow: hidden;
-    padding-bottom: 80px;
+    padding-bottom: 180px;
 }
 .weixin_code_tip {
     width: 100%;
@@ -162,8 +162,8 @@ span.special_tip {
 .pic_container {
     background-color: #f5f5f5;
     overflow: hidden;
-    padding: 1000px;
-    margin: -1000px;
+    /*padding: 1000px;
+    margin: -1000px;*/
 }
 .download_title {
     width: 200px;
