--- a/phone_index.css
+++ b/phone_index.css
@@ -14,7 +14,7 @@ body {
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
-    /*position: absolute;*/
+    position: absolute;
     overflow: hidden;
 }
 #weixin_container {
