--- a/phone_index.css
+++ b/phone_index.css
@@ -146,6 +146,7 @@ body {
     width: 100%;
     display: inline-block;
     margin-top: 20px;
+    font-family: 'AdobeSongStd-Light,CASans';
 }
 .weixin_code {
     padding: 100000px;
@@ -208,7 +209,7 @@ span.title_list {
     margin-top: 10px;
     font-size: 28px;
     color: #666;
-    width: 120px;
+    width: 200px;
     display: inline-block;
     margin-bottom: 40px;
 }
