--- a/phone_index.css
+++ b/phone_index.css
@@ -17,7 +17,7 @@ body {
     position: absolute;
     overflow: hidden;
 }
-#weixin_container {
+/*#weixin_container {
     width: 100%;
     height: 100%;
     background-color: #f5f5f5;
@@ -25,7 +25,7 @@ body {
     padding: 0;
     position: absolute;
     overflow: hidden;
-}
+}*/
 #download_container {
     width: 100%;
     height: 100%;
