--- a/phone_index.css
+++ b/phone_index.css
@@ -17,15 +17,15 @@ body {
     position: absolute;
     overflow: hidden;
 }
-/*#weixin_container {
+#weixin_container {
     width: 100%;
-    height: 100%;
+   /* height: 100%;
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
     position: absolute;
-    overflow: hidden;
-}*/
+    overflow: hidden;*/
+}
 #download_container {
     width: 100%;
     height: 100%;
