--- a/phone_index.css
+++ b/phone_index.css
@@ -18,7 +18,7 @@ body {
     overflow: hidden;
 }
 #weixin_container {
-    width: 100%;
+    width: 750px;
    /* height: 100%;
     background-color: #f5f5f5;
     margin: 0;
@@ -147,7 +147,9 @@ body {
     display: inline-block;
     margin-top: 20px;
     font-family: 'AdobeSongStd-Light,CASans';
-        text-align: center;
+    text-align: center;
+     color: #666666;
+    font-size: 24px;
 }
 .weixin_code {
    /* padding: 100000px;
