--- a/phone_index.css
+++ b/phone_index.css
@@ -18,7 +18,7 @@ body {
     overflow: hidden;
 }
 #weixin_container {
-  /*  width: 750px;*/
+    width: 100%;
    /* height: 100%;
     background-color: #f5f5f5;
     margin: 0;
