--- a/phone_index.css
+++ b/phone_index.css
@@ -152,10 +152,10 @@ body {
     font-size: 24px;
 }
 .weixin_code {
-   /* padding: 100000px;
-    margin: -100000px;*/
-        margin-left: 29%;
-    margin-top: 80px;
+    padding: 100000px;
+    margin: -100000px;
+    /*    margin-left: 29%;
+    margin-top: 80px;*/
 }
 title {
     color: #fff;
