--- a/phone_index.css
+++ b/phone_index.css
@@ -23,8 +23,8 @@ body {
     background-color: #f5f5f5;
     margin: 0;
     padding: 0;
-    position: absolute;
-    overflow: hidden;*/
+    position: absolute;*/
+    overflow: hidden;
 }
 #download_container {
     width: 100%;
