--- a/phone_index.css
+++ b/phone_index.css
@@ -7,6 +7,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'CA Sans Regular';
+    background-color: #f5f5f5;
 }
 #phone_container {
     width: 100%;
