--- a/phone_index.css
+++ b/phone_index.css
@@ -163,14 +163,9 @@ title {
     color: #fff;
     font-size: 34px;
 }
-span.special_tip {
+.special_tip {
     color: #666666;
     font-size: 8px;
-    margin-top: 28px;
-    width: 30px;
-    height: 22px;
-    display: inline-block;
-    margin-left: -100px;
 }
 .pic_container {
     background-color: #f5f5f5;
