--- a/phone_index.css
+++ b/phone_index.css
@@ -9,6 +9,9 @@ body {
     font-family: 'CA Sans Regular';
     background-color: #f5f5f5;
 }
+.font_style{
+     font-family: 'CA Sans Regular';
+}
 #phone_container {
     width: 100%;
     height: 100%;
@@ -214,6 +217,7 @@ span.title_list {
     width: 200px;
     display: inline-block;
     margin-bottom: 40px;
+        height: 40px;
 }
 .content_list_2 {
     background-image: url('image/phone_index/background_2.png');
