--- a/questionnaire.css
+++ b/questionnaire.css
@@ -56,17 +56,13 @@ textarea::-webkit-input-placeholder {
     height: 128px;
     background-image: url('image/Top@2x.png');
 }
-
-input.check {
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-}
-
 span.ttt {
-    padding-left: 6px;
+    padding-left: 52px;
     font-size: 26px;
     color: #333333;
+    display: inline-block;
+    line-height: 32px;
+    vertical-align: text-top;
 }
 
 .navbar-header {
@@ -312,4 +308,85 @@ label {
 
 .welcome-block p img {
     vertical-align: top;
+}
+.err-container{
+    display: none;
+    background-color:rgba(0,0,0,0.4);
+    background-size: cover;
+    position: absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
+.err-content{
+    background-color: #fff;
+    width:480px;
+    height:260px;
+    text-align: center;
+    padding-top: 90px;
+    font-size: 24px;
+    margin: 214px auto 0 auto;
+}
+.err-content p {
+    line-height: 24px;
+    color:#333;
+    font-family: 'AdobeSongStd-Light';
+}
+.success-block{
+    display: none;
+    margin-top: 34px;
+    margin-bottom: 60px;
+    text-align: center;
+}
+.success-block p:first-of-type{
+    color:#666;
+    font-family: 'AdobeSongStd-Light';
+    font-size: 28px;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
+.success-block p:first-of-type img{
+    margin-right: 8px;
+    vertical-align: bottom;
+}
+.success-block p:last-of-type{
+    color:#999;
+    font-size: 24px;
+    line-height: 24px;
+}
+.success-block p:last-of-type span{
+    font-family: 'AdobeSongStd-Light','CASans';
+}
+#reg_form input.check {
+    display: inline-block;
+    box-sizing: border-box;
+      left: 1px;
+      margin: 0;
+      padding: 0;
+      position: absolute;
+      top: 1px;
+      width: 30px;
+  height:30px;
+}
+ #reg_form input.check:checked + label:before{
+    background-image: url('image/check.png');
+    background-repeat: no-repeat;
+    background-color: #fff;
+    background-position: center center;
+
+}
+#reg_form input.check + label:before {
+  background-color:  #fff;
+  border:1px solid #E2E2E2;
+  border-radius: 4px;
+  content: " ";
+  top: 0;
+  left: 0;
+  position: absolute;
+  width: 32px;
+  height:32px;
+}
+#reg_form input.check + label{
+    vertical-align: middle;
 }
