--- a/questionnaire.css
+++ b/questionnaire.css
@@ -7,7 +7,10 @@ body, html {
     font-family: "Microsoft YaHei", "WhitneyMedium", sans-serif;
     background-color: #f5f5f5;
 }
-
+@font-face { 
+    font-family: 'AdobeSongStd-Light';/*/×定义font的名字×/ */
+    src: url('CA Sans-Regular.otf');/*把下载的字体文件引入进来×/ */
+}
 div, li, ul {
     box-sizing: border-box;
 }
